Add somepages payout related

--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
-VITE_API_URL=https://localhost:7025/api
+# staging
+VITE_API_URL=https://localhost:7025/api  
+# production
+#VITE_API_URL=https://adminapi.sky8pay.com/api
 IFSC_VERIFY_API:https://ifsc.razorpay.com
